--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h1>Exploring Airplane Crashes</h1>
         <div class="justify">
             This is a simple exploratory analysis reporting results learned from <a href="https://www.kaggle.com/saurograndi/airplane-crashes-since-1908">this</a> dataset.
-            The data varied from 1908 from 2019. So one may think it's a lot data! It meant to be...
+            The data varied from 1908 until 2019. So one may think it's a lot data! It meant to be...
         </div>
       </section>
       <section class="step" style="height:700px"> 
           <h1>What are the odds of dying in a plane crash?</h1>
           <div>
-              <img src="/assets/plane.jpg" style="width:80%;height:80%"> 
+              <img src="assets/plane.jpg" style="width:80%;height:80%"> 
           </div>
           <div class="justify" style="padding:5%">
               The airplane has revolutionized our existence. It has cut journeys that used to take weeks and months into just a few hours. 
