--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <div class="justify" style="padding:5%">
                         It seems that the period between 1970-1990 were pretty bad for travelling by plane... But This doesn't show the proportions of accidents over the years. It may be that, the amount of passengers became lower.
                     </div>
+                    <div class="justify" style="padding:5%">
+                        This is the main graph. You can interact with, all other graphs will be updated by it.
+                    </div>
                 </section>
                 <section class="step" style="height:700px">
                     <h1>Types of aircraft</h1>
@@ -112,7 +115,7 @@
                     <div id="lollipop-chart" style="width:500px;height:500px;margin-left:120px;margin-right:30px;margin-top:10px;margin-bottom:40px"></div>
                     <script>
                         setTimeout(function() {
-                            $('#lollipop-chart').css('margin-left', '12px')
+                            $('#lollipop-chart').css('margin-left', '8px')
                         }, 500)
                     </script>
                 </section>
