--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
         </div>     
       </section>
       <section class="step" style="height:700px">
+        <h1>Who not to fly with</h1> <br/>
+        <div class="justify" style="width:800px;height:600px;">
+            <div id="operator-count"></div>
+        </div>
+        <script>
+            setTimeout(function() {
+                $('#operator-count').css('margin-left', '-3em')
+            }, 1000)
+        </script>
+     </section>
+      <section class="step" style="height:700px">
         <h1>Types of aircraft</h1> 
         <div id="pie-chart" class="dc-chart"></div>
         <div class="justify" style="padding:5%">
@@ -111,11 +122,11 @@
         <h1>Lollipop chart ranking operators (by accidents)</h1>
         <div id="lollipop-chart" style="width:500px;height:500px;margin-left:120px;margin-right:30px;margin-top:10px;margin-bottom:40px"></div>
         <script>
-          setTimeout(function(){
-            $('#lollipop-chart').css('margin-left','0px')
-          },500)
+            setTimeout(function() {
+                $('#lollipop-chart').css('margin-left', '0px')
+            }, 1000)
         </script>
-      </section>
+    </section>
       <section class="step">
         <h1>The locations</h1>
         <div id="map" style="margin-left: -10em;"></div>
